made changes in util.class and added documentation in it